--- a/backendlogic/.env
+++ b/backendlogic/.env
@@ -1,1 +1,6 @@
-DATABASE_ACCESS = "mongodb+srv://school:school@cloudschool.cfr6o.mongodb.net/Teacher?retryWrites=true&w=majority"
+DATABASE_ACCESS = "mongodb+srv://admin:admin@cluster-ce.oiphr.mongodb.net/SCP?retryWrites=true&w=majority"
+
+
+
+
+
