--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
     "firebase": "^8.2.10",
+    "query-string": "^8.1.0",
+    "querystring-es3": "^0.2.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.2",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.2.3",
     "web-vitals": "^1.0.1"
   },
